--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
+    "midtrans-client": "^1.3.1",
     "mongoose": "^6.4.1",
     "next": "12.1.6",
     "next-auth": "^4.7.0",
