--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,11 @@
       "@/utils/*": ["utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/api/user/pay/[].tsid"
+  ],
   "exclude": ["node_modules"]
 }
