--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "jsonwebtoken": "^8.5.1",
     "midtrans-client": "^1.3.1",
     "mongoose": "^6.4.1",
-    "next": "12.1.6",
+    "next": "^12.2.0",
     "next-auth": "^4.7.0",
     "next-connect": "^0.12.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-responsive-carousel": "^3.2.23",
     "zod": "^3.17.3",
@@ -48,7 +48,7 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^12.2.0",
     "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
