--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-responsive-carousel": "^3.2.23",
+    "swr": "^1.3.0",
     "zod": "^3.17.3",
     "zod-formik-adapter": "^1.1.1",
     "zustand": "^4.0.0-rc.1"
