--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^12.2.0",
     "next-auth": "^4.7.0",
     "next-connect": "^0.12.2",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
@@ -45,6 +46,7 @@
     "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
