--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cloudinary": "^1.30.0",
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "midtrans-client": "^1.3.1",
     "mongoose": "^6.4.1",
     "next": "^12.2.0",
@@ -33,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
+    "react-md-spinner": "^1.0.0",
     "react-responsive-carousel": "^3.2.23",
     "swr": "^1.3.0",
     "zod": "^3.17.3",
@@ -44,6 +46,7 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/formidable": "^2.0.5",
+    "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
     "@types/nprogress": "^0.2.0",
