--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
-    "cloudinary": "^1.30.0",
+    "cloudinary": "^1.30.1",
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "midtrans-client": "^1.3.1",
     "mongoose": "^6.4.1",
+    "multer": "^1.4.5-lts.1",
     "next": "^12.2.0",
     "next-auth": "^4.7.0",
     "next-connect": "^0.12.2",
